--- a/src/app/modules/dashboard/pages/products/products.component.html
+++ b/src/app/modules/dashboard/pages/products/products.component.html
@@ -1,4 +1,8 @@
 <ion-content>
+  <ion-refresher slot="fixed" (ionRefresh)="getOffers($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+
   <div class='p-[22px]'>
     <div class='flex items-center justify-between'>
       <ion-menu-toggle class='mr-[12px]'>
@@ -18,10 +22,10 @@
 
     <div>
       <p class='text-primary text-[20px] leading-[24px] font-bold mt-[32px] mb-[27px]'>Полимерное сырье</p>
-
       <ion-nav-link
         router-direction='forward'
         [component]='component'
+        *ngIf='offers.length; else loading'
         class='grid grid-cols-2 grid-flow mx-[-5px]'>
         <app-card-item
           class='border-[1px] border-gray-light rounded-[10px] flex-1 m-[5px]'
@@ -30,6 +34,10 @@
           *ngFor='let item of offers'>
         </app-card-item>
       </ion-nav-link>
+      <ng-template #loading>
+        <ion-spinner class='text-center w-full'></ion-spinner>
+      </ng-template>
+
     </div>
 
 <!--    <div>-->
