--- a/src/app/modules/auth/pages/register-page/register-page.component.html
+++ b/src/app/modules/auth/pages/register-page/register-page.component.html
@@ -3,6 +3,8 @@
     Регистрация
   </h1>
 
+  <div *ngIf='errorMessage' class='text-red-300'>{{ errorMessage }}</div>
+
   <form class="mt-[78px] flex flex-col" [formGroup]='form'>
     <div class='mb-[16px]'>
       <app-input
@@ -13,7 +15,7 @@
     </div>
 
     <div class='mb-[16px]'>
-      <app-input placeholder="Номер телефона*" icon="icon-phone" formControlName='phone'></app-input>
+      <app-input type='number' placeholder="Номер телефона*" icon="icon-phone" formControlName='phone'></app-input>
     </div>
 
     <div class='mb-[16px]'>
@@ -21,11 +23,14 @@
     </div>
 
     <div class='mb-[16px]'>
-      <app-input placeholder="Пароль*" icon="icon-lock" formControlName='password'></app-input>
+      <app-input type='password' placeholder="Пароль*" icon="icon-lock" formControlName='password'></app-input>
     </div>
 
     <div>
-      <button class="btn btn-primary" type="button" (click)='onSubmit()' [disabled]='form.invalid'>Зарегистрироваться</button>
+      <button class="flex items-center justify-center btn btn-primary" type="button" (click)='onSubmit()' [disabled]='form.invalid'>
+        Зарегистрироваться
+        <ion-spinner class='h-[20px] ml-[8px]' *ngIf='loading'></ion-spinner>
+      </button>
       <p class="text-[12px] leading-[17px] text-primary text-center mt-[20px]">
         Естӣ аккаунт? &nbsp;
         <span class="font-bold" routerLink="/auth/login">Войти</span>
