--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -29,10 +29,15 @@
 
 <ion-menu contentId="main-content">
   <div class='mt-[20px]'>
-    <div class='flex items-center px-[25px] py-[10px]' *ngFor='let i of [1,2,3,4,5]'>
+    <ion-menu-toggle class='flex items-center px-[25px] py-[10px]' *ngFor='let i of [1,2,3,4,5]'>
       <span class='mr-[17px] icon icon-catalog w-[22px] h-[22px] bg-black-200'></span>
       <p class='mr-[17px] text-[14px] leading-[17px] text-black-100'>Полимерные отходы</p>
       <span class='icon icon-arrow-right w-[13px] h-[13px] bg-black-100'></span>
-    </div>
+    </ion-menu-toggle>
+    <ion-menu-toggle class='flex items-center px-[25px] py-[10px]' (click)='logout()'>
+      <span class='mr-[17px] icon icon-catalog w-[22px] h-[22px] bg-black-200'></span>
+      <p class='mr-[17px] text-[14px] leading-[17px] text-black-100'>Logout</p>
+      <span class='icon icon-arrow-right w-[13px] h-[13px] bg-black-100'></span>
+    </ion-menu-toggle>
   </div>
 </ion-menu>
