--- a/src/app/shared/controls/select/select.component.scss
+++ b/src/app/shared/controls/select/select.component.scss
@@ -14,7 +14,7 @@ ion-select::part(text) {
 ion-select::part(icon) {
   color: transparent;
 
-  background-image: url("../../../../assets/icon/arrow.svg");
+  background-image: url("../../../../assets/icons/arrow.svg");
   background-repeat: no-repeat;
   background-size: 7px 13px;
 }
