--- a/src/app/modules/dashboard/components/filter/filter.component.html
+++ b/src/app/modules/dashboard/components/filter/filter.component.html
@@ -5,7 +5,7 @@
         <span class='icon icon-close bg-white w-[14px] h-[14px]'></span>
       </div>
 
-      <div class='text-[14px] leading-[17px] text-gray-200'>Очистить</div>
+      <div class='text-[14px] leading-[17px] text-gray-200' (click)='clearFilter()'>Очистить</div>
     </div>
 
     <div class='mt-[28px] text-[18px] leading-[23px] text-gray-300'>
@@ -15,52 +15,49 @@
     <form [formGroup]='form' class='mt-[38px]'>
       <div class='mb-[22px]'>
         <app-select
-          formControlName='size_type_id'
+          formControlName='sort_type_id'
           label='Сортировка'
-          [items]="offerManuals.sort_types"
-          (changed)='change($event)'>
+          [items]="offerManuals.sort_types">
         </app-select>
       </div>
 
       <div class='mb-[22px]'>
         <app-select
-          placeholder='Твердый пластик '
           label='Категория'
-          [items]="[{id: '1', name: 'Твердый пластик'}]"
-          (changed)='change($event)'>
+          formControlName='category_id'
+          [items]="categories">
         </app-select>
       </div>
 
       <div class='mb-[22px]'>
         <app-select
-          placeholder='Алматы'
           label='Местоположение'
-          [items]="[{id: '1', name: 'Алматы '}]"
-          (changed)='change($event)'>
+          formControlName='city_id'
+          [items]="cities">
         </app-select>
       </div>
 
       <div class='mb-[22px]'>
         <app-select
           label='Тип'
-          [items]="offerManuals.types"
-          (changed)='change($event)'>
+          formControlName='type_id'
+          [items]="offerManuals.types">
         </app-select>
       </div>
 
       <div class='mb-[22px]'>
         <app-select
           label='Объем'
-          [items]="offerManuals.size_types"
-          (changed)='change($event)'>
+          formControlName='size_type_id'
+          [items]="offerManuals.size_types">
         </app-select>
       </div>
 
       <div class='mb-[22px]'>
         <app-select
           label='Материал'
-          [items]="offerManuals.meterial_types"
-          (changed)='change($event)'>
+          formControlName='meterial_type_id'
+          [items]="offerManuals.meterial_types">
         </app-select>
       </div>
 
@@ -77,15 +74,17 @@
       <div class='mb-[22px] flex items-end'>
         <div>
           <div class='text-[11px] leading-[13px] text-gray-400 flex items-center mb-[6px]'>Цена</div>
-          <app-input placeholder='от' type='number'></app-input>
+          <app-input placeholder='от' type='number' formControlName='amount_min'></app-input>
         </div>
 
         <div class='items-end ml-[30px]'>
-          <app-input placeholder='до' type='number'></app-input>
+          <app-input placeholder='до' type='number' formControlName='amount_max'></app-input>
         </div>
       </div>
 
-      <button class='btn btn-primary mt-[4px]' (click)='cancel()'>Показать результаты</button>
+      <button class='btn btn-primary mt-[4px]' (click)='onSubmit()'>
+        Показать результаты
+      </button>
 
     </form>
   </div>
