--- a/src/app/modules/dashboard/pages/profile-page/profile-page.component.html
+++ b/src/app/modules/dashboard/pages/profile-page/profile-page.component.html
@@ -14,9 +14,9 @@
     </div>
 
     <div class='mt-[34px]' *ngIf='ownOffers?.length; else loading'>
-      <div class='mb-[14px]' *ngFor='let offer of ownOffers'>
+      <div class='mb-[14px]' *ngFor='let offer of ownOffers' (click)='navigate(offer.id)'>
         <div class='bg-green-100 rounded-[12px] flex items-center justify-center'>
-          <img class='max-w-[330px] max-h-[170px] object-cover' [src]="offer?.image ? offer.image : './assets/03.png'"
+          <img class='max-w-[330px] max-h-[170px] object-cover' [src]="'https://plastic-market-app.ru/img/' + offer.image[0]"
                alt=''>
         </div>
 
