--- a/src/app/modules/dashboard/components/create/create.component.html
+++ b/src/app/modules/dashboard/components/create/create.component.html
@@ -87,7 +87,7 @@
       <app-custom-select
         formControlName='size_type_id'
         label='Объем'
-        [items]='offerManuals.types'
+        [items]='offerManuals.size_types'
       ></app-custom-select>
     </div>
 
