--- a/src/app/modules/dashboard/pages/products/products.component.html
+++ b/src/app/modules/dashboard/pages/products/products.component.html
@@ -10,7 +10,7 @@
       </ion-menu-toggle>
       <div class='flex items-center justify-between rounded-[10px] bg-light-gray py-[10px] px-[13px] flex-1 mr-[12px]'>
         <span class='mr-[8px] icon icon-search w-[20px]'></span>
-        <input type='text' class='mr-[8px] bg-transparent outline-none border-none'>
+        <input type='text' class='mr-[8px] bg-transparent outline-none border-none flex-1'>
         <span class='icon icon-filter w-[18px]' (click)='openModal()'></span>
       </div>
 
@@ -26,7 +26,6 @@
         *ngIf='offers; else loading'
         class='grid grid-cols-2 grid-flow mx-[-5px]'>
         <app-card-item
-          class='border-[1px] border-gray-light rounded-[10px] flex-1 m-[5px]'
           [offer]='item'
           (click)='navigate(item)'
           *ngFor='let item of offers'>
