--- a/src/app/modules/chat/chat-by-id/chat-by-id.component.html
+++ b/src/app/modules/chat/chat-by-id/chat-by-id.component.html
@@ -1,9 +1,9 @@
 <div class='bg-white'>
-  <div class='p-[22px] flex items-center justify-between'>
+  <div class='p-[22px] flex items-center justify-between' *ngIf='offerService.currentChat$ | async as user'>
       <span routerDirection='back' routerLink='/chat/list'
             class='icon icon-arrow-right rotate-180 w-[5px] h-[13px] bg-gray-600 mr-[25px]'></span>
     <img src='./assets/img/avatar.svg' alt=''>
-    <div class='flex-1 ml-[12px] text-[20px] leading-[24px] text-primary'>Фетисова Дарья</div>
+    <div class='flex-1 ml-[12px] text-[20px] leading-[24px] text-primary'>{{user.name}}</div>
     <span class='icon icon-burger bg-black'></span>
   </div>
 </div>
@@ -11,13 +11,13 @@
 
 <ion-content>
   <div class='p-[22px] message-list'>
-    <div class='flex w-full mb-[16px]' *ngFor='let message of messages; let odd = odd' [class.justify-end]='odd'>
-      <div class="bg-primary py-[8px] pl-[16px] pr-[20px] rounded-[11px] {{ !odd && 'bg-primary-100' }}">
-        <div class='text-[14px] leading-[20px] font-medium text-black-300'>{{ message }}</div>
-        <div class='mt-[3px] text-[12px] leading-[16px] text-blue-900'>14:43</div>
+    <div class='flex w-full mb-[16px]' *ngFor='let message of messages' [class.justify-end]="message?.direction === 'to'">
+      <div class="bg-primary py-[8px] pl-[16px] pr-[20px] rounded-[11px] {{ 'bg-primary-100' }}">
+        <div class='text-[14px] leading-[20px] font-medium text-black-300'>{{ message?.message }}</div>
+        <div class='mt-[3px] text-[12px] leading-[16px] text-blue-900'>{{ message?.created_at | date:'HH:mm' }}</div>
+        </div>
       </div>
     </div>
-  </div>
 </ion-content>
 
 <div class='bg-primary-50 h-[54] fixed bottom-0 w-full'>
